Add recipe DOCX files and update gitignore
- Added 4 DOCX files with recipes and meal data
- Modified .gitignore to include DOCX files in repository
- Total size: ~617KB

--- a/.gitignore
+++ b/.gitignore
@@ -151,7 +151,7 @@ chroma_db/*
 !chroma_db/.gitkeep
 generated_pdfs/*
 !generated_pdfs/.gitkeep
-data/*.docx
+# data/*.docx  # Comentado para incluir archivos de recetas
 data/*.pdf
 *.db
 *.sqlite
