feat: add secretary mode and enhance configuration for Nutrition Bot
- Introduced a new secretary mode for authorized users to manage patient plans efficiently.
- Added configuration options for authorized secretary Telegram user IDs in the .env file.
- Implemented a deployment script for the professional version of the bot, detailing features and setup instructions.
- Enhanced the ChromaDB service with optimized batch search capabilities for meal planning.
- Updated the recipe searcher to utilize the new batch search method, improving performance and user experience.

This commit significantly enhances the bot's functionality, providing a professional tool for nutritionists and secretaries to streamline their workflow.

--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,8 @@ SENTRY_DSN=
 
 # Environment
 ENVIRONMENT=development
+
+# Secretary Mode Configuration
+# Comma-separated list of authorized secretary Telegram user IDs
+# Example: SECRETARY_IDS=123456789,987654321
+SECRETARY_IDS=
